<resources>
	<string name="global_app_version">0.6.5 build 0624.1539</string>
	<string name="global_app_name">LiteListen</string>
	<string name="global_desk_lrc_show">Desk Lyric Show</string>
	<string name="global_slogan_all">LiteListen, LiteLife!</string>
	<string name="global_slogan_2">LiteLife</string>
	<string name="global_ok">Okay</string>
	<string name="global_cancel">Cancel</string>
	<string name="global_return">Back</string>
	<string name="global_request">Access Request</string>
	<string name="global_wait">Please wait</string>
	<string name="global_agree">I agree</string>
	<string name="global_refuse">I refuse</string>
	<string name="lrcservice_loading_lrc">Loading lyric, please wait...</string>
	<string name="lrcservice_no_lyric_found">No lyric found.\nMake a long-click here to select
		or search a lyric.</string>
	<string name="control_panel_switcher_port">Switchers</string>
	<string name="control_panel_advanced_port">Extended</string>
	<string name="control_panel_settings_port">Settings</string>
	<string name="control_panel_help_port">Get Help</string>
	<string name="control_panel_switcher_land">Swh.</string>
	<string name="control_panel_advanced_land">Ext.</string>
	<string name="control_panel_settings_land">Opt.</string>
	<string name="control_panel_help_land">Help</string>
	<string name="scrmain_extend_menu_settings">Settings</string>
	<string name="scrmain_extend_menu_desk_lrc_show">Float On</string>
	<string name="scrmain_extend_menu_desk_lrc_hide">Float Off</string>
	<string name="scrmain_extend_menu_exit">Exit</string>
	<string name="scrmain_extend_menu_keep_screen_on_true">ScrOn</string>
	<string name="scrmain_extend_menu_keep_screen_on_false">ScrOff</string>
	<string name="scrmain_extend_menu_search">Search</string>
	<string name="scrmain_extend_menu_order_asc">ASC</string>
	<string name="scrmain_extend_menu_order_desc">DESC</string>
	<string name="scrmain_extend_menu_show_lyric">Show LRC</string>
	<string name="scrmain_extend_menu_ringtone">Set Ring</string>
	<string name="scrmain_extend_menu_feedback">Feedback</string>
	<string name="scrmain_extend_menu_favourite">Favourite</string>
	<string name="scrmain_extend_menu_list">List</string>
	<string name="scrmain_extend_menu_volume">Volume</string>
	<string name="scrmain_play_mode">Play Mode</string>
	<string name="scrmain_play_mode_close">Play By Order</string>
	<string name="scrmain_play_mode_repeat_all">Repeat All</string>
	<string name="scrmain_play_mode_pause_current">Pause When A Song End</string>
	<string name="scrmain_play_mode_repeat_current">Repeat Single</string>
	<string name="scrmain_play_mode_shuffle">Shuffle</string>
	<string name="scrmain_keyword_hint">Type initials to search music list</string>
	<string name="scrmain_show_main">Click here to show player</string>
	<string name="scrmain_volume">Volume: </string>
	<string name="scrmain_volume_mute">Mute</string>
	<string name="scrmain_ringtone_successful">Ringtone has been set</string>
	<string name="scrmain_alarm_successful">Alarm has been set</string>
	<string name="scrmain_ringtone_set_refused">Failure to set music as ringtone. Maybe the music
		is using by another process.</string>
	<string name="scrmain_play_first">Please play a music first</string>
	<string name="scrmain_context_menu_music">Music Options</string>
	<string name="scrmain_context_menu_lrc">Lyric Options</string>
	<string name="scrmain_context_menu_lrc_search_not_found">There is no such lyric on Internet</string>
	<string name="scrmain_file_list">[Back]</string>
	<string name="scrmain_update_log">What\'s new?</string>
	<string name="scrmain_scanning">I\'m scanning musics, please search later.</string>
	<string name="scrmain_lyric_could_not_relate">You cannot binding a lyric to the playing music
		because of the music list is not adapt to the music</string>
	<string name="scrmain_request_info">LiteListen hopes to get your device infomation to
		improve our software. Press [I agree] to send a infomation which less
		then 1
		KB. You can also choose to refuse it and this message will
		appear only
		once. Refuse it will never affact any functions of
		LiteListen.
	</string>
	<string name="scrmain_feedback_hint">LiteListen will collect some infomation about
		device ID, locale, model and other informations of your devices, but
		it will not send your private infomation such as sms, address books
		and program data and so on.
	</string>
	<string name="scrmain_feedback_successful">Thank you for feed problem back!</string>
	<string name="scrmain_feedback_blank">You cannot feed a blank problem back.</string>
	<string name="scrmain_feedback_failure">Submit failed, please check your network and try
		again.</string>
	<string name="widget_title_small">LiteListen 4×2</string>
	<string name="widget_title_medium">LiteListen 4×3</string>
	<string name="widget_title_large">LiteListen 4×4</string>
	<string name="widget_lrc">Touch here to select a music</string>
	<string name="float_lrc">DeskLyric</string>
	<string name="float_lrc_unlocked">DeskLyric has been unlocked</string>
	<string name="float_lrc_locked">DeskLyric has been locked</string>
	<string name="float_lrc_lock">Click here to lock DeskLyric</string>
	<string name="float_lrc_unlock">Click here to unlock DeskLyric</string>
	<string name="float_lrc_activiation">DeskLyric has been enabled</string>
	<string name="float_lrc_deactivation">DeskLyric has been disabled</string>
	<string name="notification_show">Click here to back to player</string>
	<string name="notification_play">Click here to play next</string>
	<string name="pfrsmain_title">Setting to LiteListen</string>
	<string name="pfrsmain_image">Choose an image-viewer</string>
	<string name="pfrscat_general_title">General</string>
	<string name="pfrscat_general_language">Language</string>
	<string name="pfrscat_general_language_reboot">You have changed language to the same as system and
		it will effected next start.</string>
	<string name="pfrscat_general_music_path">Music path</string>
	<string name="pfrscat_general_music_path_changed">The music path you changed would take effect after
		you reboot LiteListen.</string>
	<string name="pfrscat_general_include_sub_directories">Scan with sub-directoires</string>
	<string name="pfrscat_general_ignore_size">Ignore size smaller than:</string>
	<string name="pfrscat_general_ignore_size_message">Using unit: KByte</string>
	<string name="pfrscat_general_ignore_directory">Do not scan .nomedia directoires</string>
	<string name="pfrscat_general_list_order">List sort order</string>
	<string name="pfrscat_general_auto_switch_to_lrc">Auto switch lyric show</string>
	<string name="pfrscat_general_play_mode">Play mode</string>
	<string name="pfrscat_general_notify_next">Notify icon action</string>
	<string name="pfrscat_general_favourite_max">Show count of favourite music</string>
	<string name="pfrscat_general_autopause">Pause when (dis)connected from external audio
		device</string>
	<string name="pfrscat_general_lrc_auto_download">Download LRC Automatically</string>
	<string name="pfrscat_display_title">Display</string>
	<string name="pfrscat_display_lrc_scroll_style">Lyric scroll style</string>
	<string name="pfrscat_display_background_port">Portrait background image</string>
	<string name="pfrscat_display_background_land">Landscape background image</string>
	<string name="pfrscat_display_background_brightness">Background image brightness</string>
	<string name="pfrscat_display_background_blur">Make blur to background image</string>
	<string name="pfrscat_display_use_animation">Use animations</string>
	<string name="pfrscat_display_list_font_size">List font size</string>
	<string name="pfrscat_display_list_font_color">List font color</string>
	<string name="pfrscat_display_list_font_shadow">List font shadow</string>
	<string name="pfrscat_display_list_font_shadow_color">List font shadow color</string>
	<string name="pfrscat_display_lrc_font_size">Lyric font shadow</string>
	<string name="pfrscat_display_lrc_normal_font_color">Normal lyric font color</string>
	<string name="pfrscat_display_lrc_highlight_font_color">HighLight lyric font color</string>
	<string name="pfrscat_display_lrc_font_shadow">Lyric font shadow</string>
	<string name="pfrscat_display_lrc_font_shadow_color">Lyric font shadow color</string>
	<string name="pfrscat_others_title">Others</string>
	<string name="pfrscat_others_restore">Restore to default</string>
	<string name="pfrscat_others_restore_title">Please type \"yes\" in the textbox below and press
		[Yes] to restore.</string>
	<string name="pfrscat_others_restore_message_ok">Restore successfully!</string>
	<string name="pfrscat_others_restore_message_wrong">The word(s) you type is incorrect. Restoration
		failed.
	</string>
	<string name="pfrscat_others_how_to_check_for_update">How to check for update</string>
	<string name="pfrscat_others_check_for_update">Check for update now</string>
	<string name="pfrscat_others_check_for_update_checking">Check in progress, please wait...</string>
	<string name="pfrscat_others_check_for_update_downloading">Download in progress, please wait...</string>
	<string name="pfrscat_others_check_for_update_nothing_title">Great!</string>
	<string name="pfrscat_others_check_for_update_nothing_message">You have already installed newest version of
		LiteListen, no need to reinstall.</string>
	<string name="pfrscat_others_check_for_update_got_title">Need Upgrade</string>
	<string name="pfrscat_others_check_for_update_got_message1">A new version was avaliable, VersionCode is\:
	</string>
	<string name="pfrscat_others_check_for_update_got_message2">.\n\nDo you want to update now?</string>
	<string name="pfrscat_others_check_for_update_got_failed">Update downloading failed.</string>
	<string name="pfrscat_help_title">Help</string>
	<string name="pfrscat_help_visit_official_site">Visit the official website of LiteListen</string>
	<string name="pfrscat_help_visit_official_site_message">Press [Okay] to visit the official website of
		LiteListen. \n\nA Wi-Fi connection is recommended to do it.</string>
	<string name="pfrscat_help_about">About LiteListen</string>
	<string name="pfrscat_help_about_message">LiteListen\n0.6.5 build 0624.1539\n\nThanks a lot
		for Regina and Kael for their
		translations and bug reports.\n\n[New]
		WAV format support (depends on
		system)\n[New] Double-click to play
		music\n[New] Set music as calling
		ringtone\n[Fix] A crash problem of
		function "Check for update" in the
		Settings UI\n[Fix] A crash problem
		when take a long-click on music
		items\n[Optimize] Three buttons on the
		title bar was moving to the
		menu-key menu\n[Optimize] Using dialog
		style to show volume adjust and
		it will disappear in 2
		seconds\n[Optimize] Auto delete update file in
		sd-card\n[Optimize] Some
		color adjusted\n[Optimize] Menu-key menu
		using float dialog style to
		increase the effective to the music list\n\nOfficial
		WebSite:
		\nhttp://litelisten.littledai.com/
	</string>
	<string name="update_info">Thanks a lot
		for Regina and Kael for their
		translations and bug reports.\n\n[New] WAV format support (depends on
		system)\n[New] Double-click to play music\n[New] Set music as calling
		ringtone\n[Fix] A crash problem of function "Check for update" in the
		Settings UI\n[Fix] A crash problem when take a long-click on music
		items\n[Optimize] Three buttons on the title bar was moving to the
		menu-key menu\n[Optimize] Using dialog style to show volume adjust and
		it will disappear in 2 seconds\n[Optimize] Auto delete update file in
		sd-card\n[Optimize] Some color adjusted\n[Optimize] Menu-key menu
		using float dialog style to increase the effective to the music list
	</string>
	<string-array name="item_name_pfrscat_general_language">
		<item>中文（简体）</item>
		<item>國語（台灣）</item>
		<item>English</item>
		<item>System Language</item>
	</string-array>
</resources>