<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="pfrsMain" android:title="@string/pfrsmain_title">

	<PreferenceCategory android:key="catGerneral"
		android:title="@string/pfrscat_general_title">

		<ListPreference android:entries="@array/item_name_pfrscat_general_language"
			android:entryValues="@array/item_value_pfrscat_general_language"
			android:key="lstLanguage" android:title="@string/pfrscat_general_language"
			android:defaultValue="3"></ListPreference>
		<EditTextPreference android:dialogIcon="@drawable/album_normal"
			android:dialogTitle="@string/pfrscat_general_music_path"
			android:title="@string/pfrscat_general_music_path" android:key="txtMusicPath"
			android:defaultValue="/sdcard" android:summary="/sdcard"></EditTextPreference>
		<CheckBoxPreference android:key="chkIncludeSubDirectories"
			android:title="@string/pfrscat_general_include_sub_directories"
			android:defaultValue="true"></CheckBoxPreference>
		<CheckBoxPreference android:defaultValue="true"
			android:summary="@string/pfrscat_general_ignore_directory_summary"
			android:title="@string/pfrscat_general_ignore_directory" android:key="chkIngnoreDirectory"></CheckBoxPreference>
		<CheckBoxPreference android:title="@string/pfrscat_general_auto_play"
			android:key="chkAutoPlay" android:defaultValue="false"
			android:enabled="false"></CheckBoxPreference>
		<CheckBoxPreference android:title="@string/pfrscat_general_remember_last_played"
			android:key="chkRemeberlastPlayed" android:defaultValue="true"
			android:enabled="false"></CheckBoxPreference>
		<ListPreference android:entries="@array/item_name_pfrscat_general_convert_chinese_lrc"
			android:entryValues="@array/item_value_pfrscat_general_convert_chinese_lrc"
			android:key="lstConvertChineseLRC" android:title="@string/pfrscat_general_convert_chinese_lrc"
			android:defaultValue="2" android:enabled="false"></ListPreference>

		<ListPreference android:defaultValue="2"
			android:entryValues="@array/item_value_pfrscat_general_fit_screen_orientation"
			android:key="lstFitScreenOrientation" android:entries="@array/item_name_pfrscat_general_fit_screen_orientation"
			android:title="@string/pfrscat_general_fit_screen_orientation"
			android:enabled="false"></ListPreference>
		<ListPreference android:title="@string/pfrscat_general_list_order"
			android:key="lstListOrder" android:entryValues="@array/item_value_pfrscat_general_list_order"
			android:entries="@array/item_name_pfrscat_general_list_order"
			android:defaultValue="1"></ListPreference>
		<CheckBoxPreference android:key="chkAutoSwitchToLRC"
			android:title="@string/pfrscat_general_auto_switch_to_lrc"
			android:defaultValue="false"
			android:summary="@string/pfrscat_general_auto_switch_to_lrc_summary"></CheckBoxPreference>


		<ListPreference android:defaultValue="0"
			android:key="lstPropertyReadPriority"
			android:entryValues="@array/item_value_pfrscat_general_property_read_priority"
			android:entries="@array/item_name_pfrscat_general_property_read_priority"
			android:title="@string/pfrscat_general_property_read_priority"></ListPreference>

		<ListPreference android:defaultValue="1" android:key="lstPlayMode"
			android:entryValues="@array/item_value_pfrscat_general_play_mode"
			android:entries="@array/item_name_pfrscat_general_play_mode"
			android:title="@string/pfrscat_general_play_mode"></ListPreference>












	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pfrscat_display_title"
		android:key="catDisplay">
		<ListPreference android:key="lstBackgroundPort"
			android:title="@string/pfrscat_display_background_port"
			android:defaultValue="0" android:entries="@array/item_name_pfrscat_display_background"
			android:entryValues="@array/item_value_pfrscat_display_background"></ListPreference>
		<ListPreference android:key="lstBackgroundLand"
			android:title="@string/pfrscat_display_background_land"
			android:defaultValue="0" android:entries="@array/item_name_pfrscat_display_background"
			android:entryValues="@array/item_value_pfrscat_display_background"></ListPreference>
		<EditTextPreference android:summary="75" android:defaultValue="75" android:title="@string/pfrscat_display_background_brightness" android:dialogIcon="@drawable/album_normal" android:key="txtBackgroundBrightness" android:dialogTitle="@string/pfrscat_display_background_brightness"></EditTextPreference><CheckBoxPreference android:title="@string/pfrscat_display_background_blur"
			android:defaultValue="true" android:key="chkBackgroundBlur"></CheckBoxPreference>
		<CheckBoxPreference android:defaultValue="true"
			android:key="chkUseAnimation" android:title="@string/pfrscat_display_use_animation"
			android:summary="@string/pfrscat_display_use_animation_summary"></CheckBoxPreference>



		<EditTextPreference android:dialogIcon="@drawable/album_normal"
			android:dialogTitle="@string/pfrscat_display_list_font_size"
			android:title="@string/pfrscat_display_list_font_size" android:key="txtListFontSize"
			android:defaultValue="18" android:summary="18 dip" android:enabled="false"></EditTextPreference>
		<Preference android:title="@string/pfrscat_display_list_font_color"
			android:key="btnListFontColor" android:defaultValue="#FFFFFF"
			android:summary="#FFFFFF"></Preference>
		<CheckBoxPreference android:title="@string/pfrscat_display_list_font_shadow"
			android:key="chkListFontShadow" android:defaultValue="true"></CheckBoxPreference>
		<Preference android:title="@string/pfrscat_display_list_font_shadow_color"
			android:key="btnListFontShadowColor" android:defaultValue="#0099FF"
			android:summary="#0099FF"></Preference>
		<EditTextPreference android:dialogIcon="@drawable/album_normal"
			android:dialogTitle="@string/pfrscat_display_lrc_font_size"
			android:key="txtLRCFontSize" android:title="@string/pfrscat_display_lrc_font_size"
			android:defaultValue="18" android:summary="18 dip"></EditTextPreference>
		<Preference android:title="@string/pfrscat_display_lrc_normal_font_color"
			android:key="btnLRCNormalFontColor" android:defaultValue="#FFFFFF"
			android:summary="#FFFFFF"></Preference>
		<Preference android:title="@string/pfrscat_display_lrc_highlight_font_color"
			android:key="btnLRCHighlightlFontColor" android:defaultValue="#FFFF00"
			android:summary="#FFFF00"></Preference>
		<CheckBoxPreference android:key="chkLRCFontShadow"
			android:title="@string/pfrscat_display_lrc_font_shadow"
			android:defaultValue="true"></CheckBoxPreference>
		<Preference android:title="@string/pfrscat_display_lrc_font_shadow_color"
			android:key="btnLRCFontShadowColor" android:defaultValue="#0099FF"
			android:summary="#0099FF"></Preference>





	
</PreferenceCategory>
	<PreferenceCategory android:key="catOthers"
		android:title="@string/pfrscat_others_title">

		<EditTextPreference android:title="@string/pfrscat_others_restore"
			android:summary="@string/pfrscat_others_restore_summary" android:key="txtRestore"
			android:dialogIcon="@drawable/album_normal"
			android:positiveButtonText="@string/global_ok"
			android:negativeButtonText="@string/global_cancel"
			android:dialogTitle="@string/pfrscat_others_restore"
			android:dialogMessage="@string/pfrscat_others_restore_title" android:enabled="false"></EditTextPreference>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pfrscat_help_title"
		android:key="catHelp">
		<Preference android:title="@string/pfrscat_help_visit_official_site"
			android:key="btnVisitOfficialSite" android:summary="@string/pfrscat_help_visit_official_site_summary" android:enabled="false"></Preference>
		<Preference android:title="@string/pfrscat_help_about"
			android:key="btnAbout" android:summary="@string/pfrscat_help_about_summary"></Preference>
	</PreferenceCategory>
</PreferenceScreen>
